--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             display: none;
         }
         button {
+            width: 160px;
+            height: 60px;
             position: relative;
             background-color: #ffffff;
             border:2px solid #008cba;
@@ -22,7 +24,7 @@
             -webkit-transition-duration: 0.4s; /* Safari */
             transition-duration: 0.4s;
             text-decoration: none;
-            overflow: hidden;
+            overflow: visible;
             cursor: pointer;
         }
         .play-button {
@@ -31,11 +33,17 @@
             align-items: center;
             height: 100vh; /* 高度占满视口 */
         }
+        .container {
+            margin-top: auto;
+            width: 100%;
+            background-size: cover; /* 自适应铺满容器 */
+            background-position: center center; /* 图片居中对齐 */
+        }
     </style>
 </head>
-<body background="https://img1.baidu.com/it/u=826513978,2887981843&fm=253&fmt=auto&app=138&f=JPEG?w=872&h=722">
+<body class="container" background="https://img1.baidu.com/it/u=826513978,2887981843&fm=253&fmt=auto&app=138&f=JPEG?w=872&h=722">
     <div class="play-button" >
-        <button onclick="playVideo()">点击开始起飞</button>
+        <button onclick="playVideo()">点击开始起飞 十秒后有惊喜</button>
     </div>
     <div class="v1">
         <video id="background-video" class="video-background" loop muted>
@@ -62,4 +70,5 @@
                     window.location.href = "https://ys.mihoyo.com/main/character/fontaine?char=11"; // 替换成第二个URL
                 }, 10500); // 20000毫秒 = 20秒
             }
+
 </script>
